--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -246,13 +246,13 @@
   border: none;
 }
 
-@media (max-width: 612px) {
+@media (max-width: 626px) {
   .navigation__links {
     display: none;
   }
 }
 
-@media (min-width: 613px) {
+@media (min-width: 627px) {
   .navigation__hamburger-icon {
     display: none;
   }
